--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   background-color: #485461;
   background-image: linear-gradient(315deg, #485461 0%, #28313b 74%); 
   margin: 0;
+  padding: 5vh 2vw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
